# beat-box

./: CMakeLists.txt  architecture.md  main_test.cpp
core/include/drumbox_core/: Engine.h  Params.h  Types.h
core/include/drumbox_core/drums/: HiHat.h  Kick.h  Snare.h
core/include/drumbox_core/dsp/: AllpassDelay.h  EnvelopeADExp.h  EnvelopeExp.h  FreqShifter.h  FxSection.h  Lfo.h  MasterSection.h  Noise.h  OnePole.h  Ott3Band.h  Oversampling2x.h  ReverbSchroeder.h  Saturation.h
core/include/drumbox_core/seq/: Pattern.h  Transport.h
core/src/: Engine.cpp
juce/standalone/: CMakeLists.txt
juce/standalone/Source/: Main.cpp  MainComponent.cpp  MainComponent.h
juce/standalone/Source/components/DrumControlPanel/: DrumControlPanel.cpp  DrumControlPanel.h
juce/standalone/Source/components/DrumSelector/: DrumSelector.cpp  DrumSelector.h
juce/standalone/Source/components/DrumWavePreviewComponent/: DrumWavePreviewComponent.cpp  DrumWavePreviewComponent.h
juce/standalone/Source/components/SequencerGrid/: SequencerGrid.cpp  SequencerGrid.h
juce/standalone/Source/components/StepButton/: StepButton.cpp  StepButton.h
juce/standalone/Source/components/TransportBar/: TransportBar.cpp  TransportBar.h
juce/standalone/Source/utils/: Command.h  Constants.h
tools/runner_miniaudio/: CMakeLists.txt
tools/runner_miniaudio/src/: main.cpp
